Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95627

[REG] Unable to mute sound before playing a video

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.2.0 Beta3, 6.3.0 Alpha
    • 6.2.0 Beta2
    • Multimedia
    • None
    • Windows 10, MSVC 2019
    • Windows
    • efaa84875c56140230a1cac2bd4844fce85202e0 (qt/qtmultimedia/dev) fdb558e35633c184ff9410c859c0576d7ec0907d (qt/qtmultimedia/6.2)

      Unable to mute sound initially before playing a video.

      audioOutput: AudioOutput { muted: true } // << muted has no effect, sound is still heard
      

      Regression from Qt 5.15.2.
      It was possible there to mute
      sound initially be setting MediaPlayer's muted property to true.

      Full example:

      import QtQuick
      import QtQuick.Window
      import QtMultimedia
      
      Window {
          width: 640
          height: 480
          visible: true
      
          VideoOutput {
              id: output
              anchors.fill: parent
      
              MediaPlayer {
                  videoOutput: output
                  audioOutput: AudioOutput { muted: true } // << muted has no effect, sound is still heard
      
                  // you can use any local or web media source with sound instead
                  source: "https://www.learningcontainer.com/wp-content/uploads/2020/05/sample-mp4-file.mp4"
                  Component.onCompleted: play()
              }
          }
      }
      

        For Gerrit Dashboard: QTBUG-95627
        # Subject Branch Project Status CR V

            anrocha André De La Rocha (Inactive)
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes