Allow setting mute/vol before playing and handle output device changes

Fixes: QTBUG-95627
Pick-to: 6.2
Change-Id: I8d8fbe051af6f1334d986cda23739c98bec80859
Reviewed-by: Lars Knoll <lars.knoll@qt.io>